--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <html>
 	<head>
 		<title>LHBHM</title>
@@ -15,7 +15,7 @@
 
 						<nav id="nav">
 							<ul>
-								<li class="current"><a href="index.html">Главна</a></li>
+								<li class="current"><a href="index.html">Главная</a></li>
 								<li>
 								</li>
 								<li><a href="index2.html">О нас</a></li>
