--- a/index.html
+++ b/index.html
@@ -227,12 +227,15 @@
 							<section class="3u 6u(narrower) 12u$(mobilep)">
 								<h3>Как заказать товар?</h3>
 								<p>Для того чтобы заказать понравившиеся вам товары, нужно заполнить данные справа и указать в сообщении названия продуктов и их количество.</p>
+<form action="https://www.gmail.com/" method="post" class="contact-form">
 							</section>
 							<section class="6u 12u(narrower)">
+								<form action="https://www.gmail.com/" method="post" class="contact-form">
 								<h3>Заказать товар</h3>
-								<form>
+							<form action="https://www.gmail.com/" method="post" class="contact-form">
 									<div class="row 50%">
 										<div class="6u 12u(mobilep)">
+												<form action="https://www.gmail.com/" method="post" class="contact-form">
 											<input type="text" name="name" id="name" placeholder="Введите Имя" />
 										</div>
 										<div class="6u 12u(mobilep)">
