--- a/index2.html
+++ b/index2.html
@@ -91,9 +91,10 @@
 							<section class="6u 12u(narrower)">
 								<h3>Как с нами связатся?</h3>
 								<p>Для того чтобы обратится к нам за помощью, нужно всего лишь указать вашу почту, имя и сообщение. Мы обязательно вам ответим в ближайшее время!</p>
-								<form>
+								<form action="https://www.gmail.com/" method="post" class="contact-form">
 									<div class="row 50%">
 										<div class="6u 12u(mobilep)">
+<form action="https://www.gmail.com/" method="post" class="contact-form">
 											<input type="text" name="name" id="name" placeholder="Введите Имя" />
 										</div>
 										<div class="6u 12u(mobilep)">
@@ -132,13 +133,6 @@
 				</div>
 
 		</div>
-
-
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
 
 	</body>
 </html>
