--- a/index2.html
+++ b/index2.html
@@ -15,16 +15,14 @@
 
 						<nav id="nav">
 							<ul>
-								<li class="current"><a href="index.html">Главна</a></li>
+								<li class="current"><a href="index.html">Главная</a></li>
 								<li>
 								</li>
 								<li><a href="index2.html">О нас</a></li>
 								<li></li>
 							</ul>
 						</nav>
-						<li>
-						</li>
-<h1><a href="index.html" id="logo">LH <em>BHM </em></a></h1>
+<h1><a href="index.html" id="logo"><em><img src="images/images/chhery.jpg" > LHBHM </em></a></h1>
 				</div>
 
 			<!-- Банер -->
